fixed vertical alignment of the close button

--- a/core/app/assets/stylesheets/bubble.css.less
+++ b/core/app/assets/stylesheets/bubble.css.less
@@ -459,6 +459,9 @@ ul.interacting-users {
         &:not(:first-child) {
           border-top: 1px solid @grayLighter;
         }
+        .close {
+          margin-top: 7px;
+        }
         article.fact {
           margin-left: 25px;
         }
